Cambio en el Tema 1

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
             <tr>
                 <th colspan="2">
-                    <h3>Tema 1: Estadística descriptiva</h3>
+                    <h2>Tema 1: Estadística descriptiva</h2>
                 </th>
             </tr>
             <tr>
@@ -34,98 +34,156 @@
             <tr>
                 <td>1.1 Conceptos básicos de estadística</td>
                 <td>
-                    Definición: La estadística es la disciplina que se encarga de recopilar, organizar, analizar e
-                    interpretar datos para la toma de decisiones. <br>
-                    Teoría de decisión: Método estadístico para tomar decisiones considerando la incertidumbre y las
-                    probabilidades. <br>
-                    Población: Conjunto completo de elementos o individuos sujetos a estudio. <br>
-                    Muestra aleatoria: Subconjunto representativo de la población, seleccionado de manera que cada
-                    individuo tenga igual probabilidad de ser incluido. <br>
-                    Parámetros aleatorios: Valores desconocidos que describen características de una población. <br>
+                    <p>
+                        <b>Definición de estadística:</b> La estadística es una rama de las matemáticas que se ocupa de la recopilación, análisis, interpretación y presentación de datos. Su objetivo es describir patrones y tendencias en conjuntos de datos para hacer inferencias y tomar decisiones.<br>
+                        <b>Teoría de decisión:</b> Es un área de la estadística que estudia cómo tomar decisiones óptimas bajo incertidumbre, utilizando herramientas estadísticas y probabilísticas para evaluar diferentes opciones y sus consecuencias.<br>
+                        <b>Población:</b> En estadística, una población se refiere al conjunto completo de elementos o individuos que tienen al menos una característica en común y que son de interés para el estudio estadístico.<br>
+                        <b>Muestra aleatoria:</b> Es un subconjunto representativo de la población elegido de manera que cada miembro de la población tenga la misma probabilidad de ser seleccionado. Las muestras aleatorias son fundamentales para generalizar conclusiones sobre la población más amplia a partir de los datos recogidos.<br>
+                        <b>Parámetros aleatorios:</b> Son características numéricas que describen una población completa y que generalmente son desconocidas. Por ejemplo, la media poblacional, la desviación estándar, etc. Estos parámetros son inferidos a partir de la información obtenida de una muestra.
+                    </p>
                 </td>
             </tr>
             <tr>
                 <td>1.2 Descripción de datos</td>
                 <td>
-                    Datos agrupados y no agrupados: Los datos no agrupados son aquellos que se presentan
-                    individualmente, mientras que los datos agrupados están organizados en categorías o intervalos. <br>
-                    Frecuencia de clase: La frecuencia de clase es el número de veces que se observa un valor dentro de
-                    un intervalo particular en un conjunto de datos agrupados. <br>
-                    Frecuencia relativa: La frecuencia relativa es la proporción o porcentaje de veces que ocurre un
-                    valor dentro de un conjunto de datos. <br>
-                    Punto medio: El punto medio es el valor medio de un intervalo en datos agrupados. <br>
-                    Límites: Los límites son los valores extremos de un intervalo en datos agrupados. <br>
+                    <p>
+                        <b>Datos no agrupados:</b> Son datos individuales que se presentan tal como se recopilan, sin clasificar en categorías o intervalos. Cada observación tiene un valor específico y único. <br>
+                        <b>Datos agrupados:</b> Son datos que se organizan en intervalos o clases para resumir la información y facilitar su análisis. En lugar de listar cada valor individual, los datos se agrupan en rangos o clases. <br>
+                        <b>Frecuencia de clase:</b> En datos agrupados, la frecuencia de clase se refiere al número de observaciones que caen dentro de cada intervalo o clase. Es decir, cuántas veces aparece un valor dentro de un intervalo específico. <br>
+                        <b>Frecuencia relativa:</b> Es la proporción o el porcentaje de observaciones que caen dentro de cada clase en relación con el número total de observaciones. Se calcula dividiendo la frecuencia de clase entre el tamaño total de la muestra. <br>
+                        <b>Punto medio de clase:</b> En datos agrupados, el punto medio de clase es el valor medio de cada intervalo o clase. Se calcula sumando los límites inferior y superior de la clase y dividiendo por 2. <br>
+                        <b>Límites de clase:</b> Son los valores que definen los extremos de cada intervalo o clase en datos agrupados. Existen límites inferior y superior para cada intervalo, que determinan los valores mínimos y máximos dentro de ese rango. <br>
+                    </p>
                 </td>
             </tr>
             <tr>
-                <td>1.3 Medidas de tendencia central</td>
+                <td>1.3 Medidas de tendencia central y Medidas de dispersión</td>
                 <td>
-                    Media aritmética: Es el promedio comúnmente utilizado, obtenido sumando todos los valores y
-                    dividiendo esa suma por la cantidad de valores. <br>
-                    Media geométrica: Es el promedio obtenido multiplicando todos los valores y luego tomando la raíz
-                    n-ésima del producto, donde n es el número total de valores. <br>
-                    Media ponderada: Es un promedio donde cada valor tiene un peso asignado. Se calcula multiplicando
-                    cada valor por su respectivo peso, sumando estos productos y dividiendo por la suma de los pesos.
-                    <br>
-                    Mediana: Valor central de un conjunto de datos ordenados. <br>
-                    Moda: Valor más frecuente en un conjunto de datos. <br>
-                    Medidas de dispersión: Indican la variabilidad de los datos respecto a una medida central. <br>
-                    Varianza: Es una medida de dispersión que indica cuánto se alejan los valores de una serie de datos
-                    de su media. Se calcula como el promedio de las diferencias al cuadrado entre cada dato y la media.
-                    <br>
-                    Desviación estándar: Es la raíz cuadrada de la varianza. Proporciona una medida de dispersión
-                    similar a la varianza, pero en la misma escala que los datos originales. <br>
-                    Desviación media: Es la media de las diferencias absolutas entre cada dato y la media. Proporciona
-                    una medida de dispersión que considera tanto los valores por encima como por debajo de la media.
-                    <br>
-                    Desviación mediana: Es la mediana de las diferencias absolutas entre cada dato y la mediana. Es
-                    menos sensible a valores extremos que la desviación media, lo que la hace útil en conjuntos de datos
-                    con valores atípicos. <br>
-                    Rango: Es la diferencia entre el valor máximo y el valor mínimo en un conjunto de datos. Es una
-                    medida simple de dispersión que puede proporcionar una idea general de la amplitud de los datos.
-                    <br>
+                    <p>
+                        <b>Medidas de tendencia central:</b> <br>
+                        Media aritmética: Es el promedio de un conjunto de datos numéricos. Se calcula sumando todos los valores y dividiendo por el número total de observaciones n.
+                        <div id="math-output">
+                            \( \bar{x} = \frac{1}{n} \sum_{i=1}^{n} x_i \)
+                        </div>
+                        Media geométrica: Es útil para calcular el promedio de tasas de crecimiento o cuando se manejan datos que crecen exponencialmente. Se obtiene calculando la raíz enésima del producto de los valores.
+                        <div id="math-output">
+                            \( \bar{x}_{geom} = \left( \prod_{i=1}^{n} x_i \right)^{1/n} \)
+                        </div>
+                        Media ponderada: Es la media en la cual diferentes observaciones tienen pesos diferentes. Se calcula multiplicando cada valor por su peso correspondiente, sumando estos productos y dividiendo por la suma de los pesos.
+                        <div id="math-output">
+                            \( \bar{x}_{pond} = \frac{\sum_{i=1}^{n} w_i \cdot x_i}{\sum_{i=1}^{n} w_i} \)
+                        </div>
+                        Mediana: Es el valor que separa a la mitad de los datos cuando estos están ordenados de menor a mayor (o viceversa). Si n es impar, la mediana es el valor en el centro de la distribución; si n es par, es el promedio de los dos valores centrales.
+                        <br>
+                        Moda: Es el valor que ocurre con mayor frecuencia en un conjunto de datos. Puede haber una moda (unimodal), dos modas (bimodal) o más (multimodal).
+                        <br>
+                        <b>Medidas de dispersión:</b> <br>
+                        Varianza: Mide la dispersión de los datos con respecto a la media. Se calcula como la media de los cuadrados de las desviaciones de cada valor respecto a la media.
+                        <div id="math-output">
+                            \( \sigma^2 = \frac{1}{n} \sum_{i=1}^{n} (x_i - \bar{x})^2 \)
+                        </div>
+                        Desviación estándar: Es la raíz cuadrada positiva de la varianza y proporciona una medida de dispersión más intuitiva en la misma escala de los datos originales.
+                        <div id="math-output">
+                            \( \sigma = \sqrt{\sigma^2} \)
+                        </div>
+                        <br>
+                        Desviación media: Es la media de las desviaciones absolutas de cada valor respecto a la media.
+                        <div id="math-output">
+                            \( \text{Desviación media} = \frac{1}{n} \sum_{i=1}^{n} |x_i - \bar{x}| \)
+                        </div>
+                        Desviación mediana: Es la mediana de las desviaciones absolutas de cada valor respecto a la mediana.
+                        <br>
+                        Rango: Es la diferencia entre el valor máximo y el valor mínimo en un conjunto de datos. Proporciona una medida simple de la amplitud de los datos.
+                        <div id="math-output">
+                            \( \text{Rango} = x_{\max} - x_{\min} \)
+                        </div>
+                    </p>
                 </td>
             </tr>
             <tr>
                 <td>1.4 Parámetros para datos agrupados</td>
                 <td>
-                    Este tema se centra en los métodos para calcular parámetros estadísticos, como la media y la
-                    varianza, cuando los datos están agrupados en intervalos en lugar de ser valores individuales. Esto
-                    es importante porque muchos conjuntos de datos son demasiado grandes para analizar cada valor
-                    individualmente, por lo que se agrupan en intervalos para facilitar su análisis.
+                    <p>
+                        En estadística, cuando los datos están agrupados en intervalos o clases, se utilizan diferentes parámetros para
+                        caracterizar la distribución de los datos de manera resumida: <br>
+                    </p>
+                    <ul>
+                        <li>
+                            <b>Media para datos agrupados:</b> Es el promedio ponderado de los puntos medios de cada clase, utilizando las frecuencias 
+                            como pesos. <br>
+                            <div id="math-output">
+                                \( \bar{x} = \frac{\sum_{i=1}^{k} f_i \cdot x_i}{n} \)
+                            </div>
+                            Donde <i>k</i> es el número de clases, <i>F<sub>i</sub></i> es la frecuencia de la i-ésima clase, <i>x<sub>i</sub></i> 
+                            es el punto medio de la i-ésima clase, y <i>n</i> es el número total de observaciones.
+                        </li>
+                        <li>
+                            <b>Varianza y desviación estándar para datos agrupados:</b> Son medidas de dispersión ajustadas para datos agrupados, 
+                            calculadas utilizando las frecuencias y los puntos medios de las clases.
+                            <div id="math-output">
+                                \( \sigma^2 = \frac{\sum_{i=1}^{k} f_i \cdot (x_i - \bar{x})^2}{n} \)
+                                <br>
+                                \( \sigma = \sqrt{\sigma^2} \)
+                            </div>
+                        </li>
+                    </ul>
                 </td>
             </tr>
             <tr>
                 <td>1.5 Distribución de frecuencias</td>
                 <td>
-                    Se aborda cómo organizar los datos en categorías o intervalos y contar cuántas observaciones caen en
-                    cada categoría. La distribución de frecuencias proporciona una forma clara de comprender la
-                    distribución de los datos y es fundamental para calcular estadísticas descriptivas y hacer
-                    inferencias sobre la población a partir de una muestra.
+                    <p>
+                        La distribución de frecuencias es una tabla que muestra la frecuencia (número de veces) con la que ocurren diferentes
+                        valores o rangos de valores en un conjunto de datos. Incluye:
+                    </p>
+                    <ul>
+                        <li><b>Frecuencia absoluta <i>(f)</i></b>: Número de veces que un valor específico o un intervalo de valores ocurre en el conjunto de datos.</li>
+                        <li><b>Frecuencia relativa <i>(fr)</i></b>: Proporción de la frecuencia absoluta respecto al total de observaciones.</li>
+                        <li><b>Frecuencia acumulada <i>(F)</i></b>: Suma acumulativa de las frecuencias absolutas hasta una clase específica.</li>
+                    </ul>
                 </td>
             </tr>
             <tr>
                 <td>1.6 Técnicas de agrupación de datos</td>
                 <td>
-                    Se exploran los métodos para agrupar datos en intervalos o categorías de manera significativa y
-                    útil. Esto puede incluir el uso de reglas específicas para determinar el ancho de los intervalos y
-                    garantizar que la agrupación refleje adecuadamente la distribución de los datos.
+                    <p>
+                        Agrupar datos implica organizar los datos en clases o intervalos para facilitar su análisis y presentación. Las técnicas comunes incluyen:                
+                    </p>
+                    <ul>
+                        <li><b>Determinación del rango y número de clases:</b> Se calcula el rango de los datos y se decide el número de clases.</li>
+                        <li><b>Amplitud de clase:</b> La amplitud de cada clase se determina dividiendo el rango por el número de clases.</li>
+                        <li><b>Límites de clase</b>: Se establecen los límites inferior y superior de cada clase.</li>
+                        <li><b>Punto medio de clase:</b> Se calcula como el promedio de los límites inferior y superior de la clase.</li>
+                    </ul>
                 </td>
             </tr>
             <tr>
                 <td>1.7 Técnicas de muestreo</td>
-                <td>En el desarrollo de este tema se examinan los diferentes métodos para seleccionar una muestra
-                    representativa de una población más grande. Estas técnicas son cruciales para garantizar que la
-                    muestra captura adecuadamente la variabilidad y características de la población, lo que permite
-                    hacer inferencias precisas sobre la población a partir de la muestra seleccionada.</td>
+                <td>
+                    <p>Las técnicas de muestreo son métodos utilizados para seleccionar una muestra representativa de una población más amplia. Incluyen: </p>
+                    <ul>
+                        <li><b>Muestreo aleatorio simple:</b> Cada miembro de la población tiene la misma probabilidad de ser seleccionado.</li>
+                        <li><b>Muestreo estratificado:</b> La población se divide en subgrupos (estratos) y se toma una muestra aleatoria de cada uno.</li>
+                        <li><b>Muestreo sistemático:</b> Se selecciona cada <i>k</i>-ésimo miembro de la población.</li>
+                        <li><b>Muestreo por conglomerados:</b> La población se divide en grupos (conglomerados) y se seleccionan aleatoriamente algunos de estos grupos.</li>
+                    </ul>
+                    <p>Estas técnicas aseguran que la muestra sea representativa de la población, permitiendo inferencias válidas y precisas sobre la población completa.</p>
+                </td>
             </tr>
             <tr>
                 <td>1.8 Histogramas</td>
                 <td>
-                    Parecidos a los gráficos de barras, estos muestran la distribución de frecuencias de un conjunto de
-                    datos. <br>
-                    Ayudan a visualizar la forma y dispersión de los datos, identificando patrones y tendencias. Son
-                    útiles para datos agrupados y continuos.
+                    <p>
+                        Un histograma es una representación gráfica que muestra la distribución de frecuencias de datos continuos. Se utiliza
+                        para visualizar la forma y la distribución de un conjunto de datos, destacando qué intervalos o clases tienen mayor
+                        concentración de datos. <br>
+                        Para crear un histograma, se siguen estos pasos:
+                    </p>
+                    <ul>
+                        <li><b>Dibujo de los ejes coordenados:</b> Se dibujan los ejes x e y. El eje x representa las clases o intervalos de datos, y el eje y representa la frecuencia de cada clase.</li>
+                        <li><b>Marcas en el eje x:</b> Se colocan las marcas correspondientes a cada clase o intervalo de datos en el eje x. Cada columna del histograma representa un intervalo de clase, por lo que la base de cada columna debe coincidir con el ancho del intervalo de clase.</li>
+                        <li><b>Altura de las columnas:</b> En el eje y se representa la frecuencia absoluta o relativa de cada clase. La altura de cada columna del histograma corresponde a esta frecuencia.</li>
+                    </ul>
                 </td>
             </tr>
 
@@ -133,7 +191,7 @@
 
             <tr>
                 <th colspan="2">
-                    <h3>Tema 2: Fundamentos de la Teoría de Probabilidad</h3>
+                    <h2>Tema 2: Fundamentos de la Teoría de Probabilidad</h2>
                 </th>
             </tr>
             <tr>
@@ -375,7 +433,7 @@
 
             <tr>
                 <th colspan="2">
-                    <h3>Tema 3: Variables Aleatorias</h3>
+                    <h2>Tema 3: Variables Aleatorias</h2>
                 </th>
             </tr>
             <tr>
@@ -569,7 +627,7 @@
 
             <tr>
                 <th colspan="2">
-                    <h3>Tema 4: Distribuciones de Probabilidad</h3>
+                    <h2>Tema 4: Distribuciones de Probabilidad</h2>
                 </th>
             </tr>
             <tr>
