--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
                 <button class="subtopic" id="180"><span>
                         <span class="subtopic-number">1.8 </span>Histogramas
                 </span></button>
+                <button class="subtopic" id="190"><span>
+                    <span class="subtopic-number"></span>Nootebooks
+                </span></button>
             </div>
             <div class="contents">
                 <div class="content-subtopic" id="content-110">
@@ -203,6 +206,12 @@
                         <li><b>Altura de las columnas:</b> En el eje y se representa la frecuencia absoluta o relativa de cada clase. La altura de cada columna del histograma corresponde a esta frecuencia.</li>
                     </ul>
                 </div>
+                <div class="content-subtopic" id="content-190" style="text-align: left; position: relative; left: -30%;">
+                    <h3><span class="content-subtopic-number"></span>Datos Agrupados Dicretos</h3>
+                    <iframe src="https://nbviewer.org/github/JeanPaulVidal/codeBase/blob/de0b7fce7ac9f6a04d39bdd9102f162e3b72cd56/TestDatosAgrupados.ipynb" width="300%" height="600px"></iframe>
+                    <h3><span class="content-subtopic-number"></span>Datos Agrupados Continuos</h3>
+                    <iframe src="https://nbviewer.org/github/JeanPaulVidal/codeBase/blob/de0b7fce7ac9f6a04d39bdd9102f162e3b72cd56/TestDatosCualitativos.ipynb" width="300%" height="600px"></iframe>
+                </div>
             </div>
         </div>
     </div>
@@ -254,6 +263,9 @@
                 </span></button>
                 <button class="subtopic" id="270"><span>
                     <span class="subtopic-number">2.7 </span>Eventos Independientes: Regla de Bayes
+                </span></button>
+                <button class="subtopic" id="280"><span>
+                    <span class="subtopic-number"></span>Nootebooks
                 </span></button>
             </div>
             <div class="contents">
@@ -459,6 +471,10 @@
                     <br>
                     Más de dos eventos pueden ser independientes simultáneamente si cada par de eventos es independiente entre sí.
                 </div>
+                <div class="content-subtopic" id="content-280" style="text-align: left; position: relative; left: -30%;">
+                    <h3><span class="content-subtopic-number"></span>Ejercicios Combinaciones y Permutaciones</h3>
+                    <iframe src="https://nbviewer.org/github/imac01labtics/Tecnicas_De_Conteo_Ejercicios/blob/3b894d89e3e12d91f483c9c85ebcd90e98c67cf7/Ejercicios_Tecnicas_De_Conteo.ipynb" width="250%" height="600px"></iframe>
+                </div>
             </div>
         </div>
     </div>
@@ -513,6 +529,9 @@
                         probabilidad asociada. Por ejemplo, el resultado de lanzar un dado es una variable
                         aleatoria discreta, ya que solo puede tomar valores como 1, 2, 3, 4, 5 o 6, cada uno
                         con una probabilidad específica.
+                        <center>
+                            <iframe src="https://drive.google.com/file/d/1D2xvgviUmYj8q0tufyGe6Mt9gAysMgFx/preview" width="600" height="350"></iframe>
+                        </center>
                     </p>
                 </div>
                 <div class="content-subtopic" id="content-311">
@@ -589,6 +608,9 @@
                         Por ejemplo, la altura de una persona o la temperatura medida en grados Celsius son ejemplos
                         de variables aleatorias continuas, ya que pueden tomar cualquier valor dentro de un rango
                         específico (por ejemplo, de 0 a 100 cm para la altura, o de -273.15°C a 100°C para la temperatura).
+                        <center>
+                            <iframe src="https://drive.google.com/file/d/1VPovTvNp1fMPNp5KhJHvUEa6PxWgwVzA/preview" width="600" height="350"></iframe>
+                        </center>
                     </p>
                 </div>
                 <div class="content-subtopic" id="content-321">
@@ -745,6 +767,11 @@ p = 0.5
 k=4
 prob = binom.pmf(k, n, p)
 </code></pre>
+                <center>
+                    <br>
+                    <p><b>Video Ejercicio 7 (Distribución Binomial)</b></p>
+                    <iframe src="https://drive.google.com/file/d/1d81ZUVNwWVeHeGAMBQLzW3OvWzikb4AJ/preview" width="600" height="350"></iframe>
+                </center>
                 </div>
                 <div class="content-subtopic" id="content-430">
                     <h3><span class="content-subtopic-number">4.3 </span>Distribución hipergeométrica</h3>
@@ -998,7 +1025,7 @@ prob = norm.pdf(x, mu, sigma)
             </div>
         </div>
     </div>
-    
+
     <!-- 
     <div class="topic">
         <div class="topic-title"><h2>@@@@@@@@@@@@@@@</h2></div>
@@ -1018,8 +1045,6 @@ prob = norm.pdf(x, mu, sigma)
         </div>
     </div>
     -->
-
-
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/highlight.min.js"></script>
     <script>hljs.highlightAll();</script>
