--- a/index.html
+++ b/index.html
@@ -62,8 +62,14 @@
                 <button class="subtopic" id="180"><span>
                         <span class="subtopic-number">1.8 </span>Histogramas
                 </span></button>
-                <button class="subtopic" id="190"><span>
-                    <span class="subtopic-number"></span>Nootebooks
+                <button class="subtopic" id="n01"><span>
+                    <span class="subtopic-number"></span>Nootebook: Distribucion de Frecuencias 
+                </span></button>
+                <button class="subtopic" id="n02"><span>
+                    <span class="subtopic-number"></span>Nootebook: Datos Dicretos Cualitativos 
+                </span></button>
+                <button class="subtopic" id="n03"><span>
+                    <span class="subtopic-number"></span>Nootebook: Datos Continuos
                 </span></button>
             </div>
             <div class="contents">
@@ -206,11 +212,14 @@
                         <li><b>Altura de las columnas:</b> En el eje y se representa la frecuencia absoluta o relativa de cada clase. La altura de cada columna del histograma corresponde a esta frecuencia.</li>
                     </ul>
                 </div>
-                <div class="content-subtopic" id="content-190" style="text-align: left; position: relative; left: -30%;">
-                    <h3><span class="content-subtopic-number"></span>Datos Agrupados Dicretos</h3>
-                    <iframe src="https://nbviewer.org/github/JeanPaulVidal/codeBase/blob/de0b7fce7ac9f6a04d39bdd9102f162e3b72cd56/TestDatosAgrupados.ipynb" width="300%" height="600px"></iframe>
-                    <h3><span class="content-subtopic-number"></span>Datos Agrupados Continuos</h3>
-                    <iframe src="https://nbviewer.org/github/JeanPaulVidal/codeBase/blob/de0b7fce7ac9f6a04d39bdd9102f162e3b72cd56/TestDatosCualitativos.ipynb" width="300%" height="600px"></iframe>
+                <div class="content-subtopic" id="content-n01" style="text-align: left; position: relative; left: -35%;">
+                    <iframe src="https://nbviewer.org/github/JeanPaulVidal/codeBase/blob/de0b7fce7ac9f6a04d39bdd9102f162e3b72cd56/TestTablaDeFrecuencias.ipynb" width="350%" height="600px"></iframe>
+                </div>
+                <div class="content-subtopic" id="content-n02" style="text-align: left; position: relative; left: -35%;">
+                    <iframe src="https://nbviewer.org/github/JeanPaulVidal/codeBase/blob/de0b7fce7ac9f6a04d39bdd9102f162e3b72cd56/TestDatosCualitativos.ipynb" width="350%" height="600px"></iframe>
+                </div>
+                <div class="content-subtopic" id="content-n03" style="text-align: left; position: relative; left: -35%;">
+                    <iframe src="https://nbviewer.org/github/JeanPaulVidal/codeBase/blob/de0b7fce7ac9f6a04d39bdd9102f162e3b72cd56/TestDatosAgrupados.ipynb" width="350%" height="600px"></iframe>
                 </div>
             </div>
         </div>
@@ -265,7 +274,7 @@
                     <span class="subtopic-number">2.7 </span>Eventos Independientes: Regla de Bayes
                 </span></button>
                 <button class="subtopic" id="280"><span>
-                    <span class="subtopic-number"></span>Nootebooks
+                    <span class="subtopic-number"></span>Nootebook: Combinaciones y Permutaciones
                 </span></button>
             </div>
             <div class="contents">
@@ -471,9 +480,8 @@
                     <br>
                     Más de dos eventos pueden ser independientes simultáneamente si cada par de eventos es independiente entre sí.
                 </div>
-                <div class="content-subtopic" id="content-280" style="text-align: left; position: relative; left: -30%;">
-                    <h3><span class="content-subtopic-number"></span>Ejercicios Combinaciones y Permutaciones</h3>
-                    <iframe src="https://nbviewer.org/github/imac01labtics/Tecnicas_De_Conteo_Ejercicios/blob/3b894d89e3e12d91f483c9c85ebcd90e98c67cf7/Ejercicios_Tecnicas_De_Conteo.ipynb" width="250%" height="600px"></iframe>
+                <div class="content-subtopic" id="content-280" style="text-align: left; position: relative; left: -35%;">
+                    <iframe src="https://nbviewer.org/github/imac01labtics/Tecnicas_De_Conteo_Ejercicios/blob/3b894d89e3e12d91f483c9c85ebcd90e98c67cf7/Ejercicios_Tecnicas_De_Conteo.ipynb" width="350%" height="600px"></iframe>
                 </div>
             </div>
         </div>
