--- a/index.html
+++ b/index.html
@@ -63,13 +63,7 @@
                         <span class="subtopic-number">1.8 </span>Histogramas
                 </span></button>
                 <button class="subtopic" id="n01"><span>
-                    <span class="subtopic-number"></span>Nootebook: Distribucion de Frecuencias 
-                </span></button>
-                <button class="subtopic" id="n02"><span>
-                    <span class="subtopic-number"></span>Nootebook: Datos Dicretos Cualitativos 
-                </span></button>
-                <button class="subtopic" id="n03"><span>
-                    <span class="subtopic-number"></span>Nootebook: Datos Continuos
+                    <span class="subtopic-number">[Nootebook] </span>Distribución de Frecuencias 
                 </span></button>
             </div>
             <div class="contents">
@@ -213,13 +207,7 @@
                     </ul>
                 </div>
                 <div class="content-subtopic" id="content-n01" style="text-align: left; position: relative; left: -35%;">
-                    <iframe src="https://nbviewer.org/github/JeanPaulVidal/codeBase/blob/de0b7fce7ac9f6a04d39bdd9102f162e3b72cd56/TestTablaDeFrecuencias.ipynb" width="350%" height="600px"></iframe>
-                </div>
-                <div class="content-subtopic" id="content-n02" style="text-align: left; position: relative; left: -35%;">
-                    <iframe src="https://nbviewer.org/github/JeanPaulVidal/codeBase/blob/de0b7fce7ac9f6a04d39bdd9102f162e3b72cd56/TestDatosCualitativos.ipynb" width="350%" height="600px"></iframe>
-                </div>
-                <div class="content-subtopic" id="content-n03" style="text-align: left; position: relative; left: -35%;">
-                    <iframe src="https://nbviewer.org/github/JeanPaulVidal/codeBase/blob/de0b7fce7ac9f6a04d39bdd9102f162e3b72cd56/TestDatosAgrupados.ipynb" width="350%" height="600px"></iframe>
+                    <iframe src="DatosAgrupados.html" width="350%" height="600px"></iframe>
                 </div>
             </div>
         </div>
@@ -274,7 +262,7 @@
                     <span class="subtopic-number">2.7 </span>Eventos Independientes: Regla de Bayes
                 </span></button>
                 <button class="subtopic" id="280"><span>
-                    <span class="subtopic-number"></span>Nootebook: Combinaciones y Permutaciones
+                    <span class="subtopic-number">[Nootebook] </span> Combinaciones y Permutaciones
                 </span></button>
             </div>
             <div class="contents">
@@ -481,7 +469,7 @@
                     Más de dos eventos pueden ser independientes simultáneamente si cada par de eventos es independiente entre sí.
                 </div>
                 <div class="content-subtopic" id="content-280" style="text-align: left; position: relative; left: -35%;">
-                    <iframe src="https://nbviewer.org/github/imac01labtics/Tecnicas_De_Conteo_Ejercicios/blob/3b894d89e3e12d91f483c9c85ebcd90e98c67cf7/Ejercicios_Tecnicas_De_Conteo.ipynb" width="350%" height="600px"></iframe>
+                    <iframe src="Ejercicios_Tecnicas_De_Conteo.html" width="350%" height="600px"></iframe>
                 </div>
             </div>
         </div>
