--- a/index.html
+++ b/index.html
@@ -62,9 +62,16 @@
                 <button class="subtopic" id="180"><span>
                         <span class="subtopic-number">1.8 </span>Histogramas
                 </span></button>
+            <!--
                 <button class="subtopic" id="n01"><span>
                     <span class="subtopic-number">[Nootebook] </span>Distribución de Frecuencias 
                 </span></button>
+            -->
+                <a href="DatosAgrupados.html" style="padding: 0px;>
+                    <button class="subtopic" id="n"><span>
+                        <span class="subtopic-number">[Nootebook] </span>Distribución de Frecuencias 
+                    </span></button>
+                </a>
             </div>
             <div class="contents">
                 <div class="content-subtopic" id="content-110">
@@ -214,7 +221,7 @@
     </div>
 
     <!-- ###########################################  TEMA 2 ########################################### -->
-    <div class="topic" style="height: 470px;">
+    <div class="topic">
         <div class="topic-title"><h2>Tema 2: Fundamentos de la Teoría de Probabilidad</h2></div>
         <div class="general-content">
             <div class="subtopics">
@@ -261,9 +268,16 @@
                 <button class="subtopic" id="270"><span>
                     <span class="subtopic-number">2.7 </span>Eventos Independientes: Regla de Bayes
                 </span></button>
-                <button class="subtopic" id="280"><span>
-                    <span class="subtopic-number">[Nootebook] </span> Combinaciones y Permutaciones
-                </span></button>
+                <!-- 
+                    <button class="subtopic" id="n02"><span>
+                        <span class="subtopic-number">[Nootebook] </span> Combinaciones y Permutaciones
+                    </span></button>
+                -->
+                <a href="Ejercicios_Tecnicas_De_Conteo.html" style="padding: 0px;">
+                    <button class="subtopic" id="n"><span>
+                        <span class="subtopic-number">[Nootebook] </span> Combinaciones y Permutaciones
+                    </span></button>
+                </a>
             </div>
             <div class="contents">
                 <div class="content-subtopic" id="content-210">
@@ -468,7 +482,7 @@
                     <br>
                     Más de dos eventos pueden ser independientes simultáneamente si cada par de eventos es independiente entre sí.
                 </div>
-                <div class="content-subtopic" id="content-280" style="text-align: left; position: relative; left: -35%;">
+                <div class="content-subtopic" id="content-n02" style="text-align: left; position: relative; left: -35%;">
                     <iframe src="Ejercicios_Tecnicas_De_Conteo.html" width="350%" height="600px"></iframe>
                 </div>
             </div>
