--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <span class="subtopic-number">[Nootebook] </span>Distribución de Frecuencias 
                 </span></button>
             -->
-                <a href="DatosAgrupados.html" style="padding: 0px;>
+                <a href="DatosAgrupados.html" style="padding: 0px;">
                     <button class="subtopic" id="n"><span>
                         <span class="subtopic-number">[Nootebook] </span>Distribución de Frecuencias 
                     </span></button>
