--- a/Ejercicios_Tecnicas_De_Conteo.html
+++ b/Ejercicios_Tecnicas_De_Conteo.html
@@ -2,7 +2,24 @@
 <html>
 <head><meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<style>
+  .back-button {
+      display: inline-block;
+      padding: 10px 20px;
+      background-color: #007bff; /* Color de fondo */
+      color: #fff; /* Color del texto */
+      text-decoration: none; /* Quitar subrayado de enlace */
+      border: 1px solid #007bff; /* Borde del botón */
+      border-radius: 5px; /* Bordes redondeados */
+      font-size: 16px; /* Tamaño del texto */
+  }
+  
+  .back-button:hover {
+      background-color: #0056b3; /* Cambio de color al pasar el ratón */
+      border-color: #0056b3; /* Cambio de color del borde al pasar el ratón */
+  }
+</style>
+<a href="index.html" class="back-button">&lt;</a>
 <title>Ejercicios_Tecnicas_De_Conteo</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 
 
