--- a/DatosAgrupados.html
+++ b/DatosAgrupados.html
@@ -12,6 +12,7 @@
       border: 1px solid #007bff; /* Borde del botón */
       border-radius: 5px; /* Bordes redondeados */
       font-size: 16px; /* Tamaño del texto */
+      position: fixed;
   }
   
   .back-button:hover {
@@ -20,6 +21,7 @@
   }
 </style>
 <a href="index.html" class="back-button">&lt;</a>
+<br>
 <style>
   body {
       font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
