--- a/Ejercicios_Tecnicas_De_Conteo.html
+++ b/Ejercicios_Tecnicas_De_Conteo.html
@@ -12,6 +12,7 @@
       border: 1px solid #007bff; /* Borde del botón */
       border-radius: 5px; /* Bordes redondeados */
       font-size: 16px; /* Tamaño del texto */
+      position: fixed;
   }
   
   .back-button:hover {
@@ -20,6 +21,7 @@
   }
 </style>
 <a href="index.html" class="back-button">&lt;</a>
+<br>
 <title>Ejercicios_Tecnicas_De_Conteo</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 
 
